--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,9 @@
 ---
+import '../styles/main.scss';
+import Image from '../components/Image.astro';
+import Header from './Header.astro';
+import Footer from './Footer.astro';
+
 export interface Props {
 	title: string;
 }
@@ -19,21 +24,81 @@ const { title } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body>
-		<slot />
+	<body class="flex flex-col bg-light font-montserrat text-base">
+		<Header />	
+		<main class="mt-12 lg:mt-20">
+			<slot />
+		</main>
+		<div class="bg-container">
+			<Image 
+				src="/img/backgrounds/bg_shape_top.webp"
+				alt=""
+			/>
+			<Image 
+				src="/img/backgrounds/bg_shape_mid.webp"
+				alt=""
+			/>
+			<Image 
+				src="/img/backgrounds/bg_shape_bot.webp"
+				alt=""
+			/>
+		</div>
+		<Footer />
 	</body>
 </html>
-<style is:global>
-	:root {
-		--accent: 124, 58, 237;
-		--accent-gradient: linear-gradient(45deg, rgb(var(--accent)), #da62c4 30%, white 60%);
-	}
+<style lang="scss" is:global>
+	@use '../styles/_variables.scss' as *;
+
 	html {
-		font-family: system-ui, sans-serif;
-		background-color: #F6F6F6;
+		font-size: 60%;
+		@media screen and (min-width: 600px) {
+			font-size: 70%;
+		}
+		@media screen and (min-width: 1024px) {
+			font-size: 80%;
+		}
+		@media screen and (min-width: 1280px) {
+			font-size: 90%;
+		}
+		@media screen and (min-width: 1340px) {
+			font-size: 100%;
+		}
 	}
-	code {
-		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-			Bitstream Vera Sans Mono, Courier New, monospace;
+
+	body {
+		min-height: 100vh;
+		min-height: 100dvh;
 	}
+
+	main {
+		flex: 1;
+		min-height: 5000px;
+	}
+
+	main, footer, header {
+		position: relative;
+	}
+
+	main, footer > *, header {
+		padding: 20px 40px;
+
+		@media screen and (min-width: 1024px) {
+			padding: 35px 70px;
+		}
+
+		@media screen and (min-width: 1280px) {
+			padding: 50px 100px;
+		}
+	}
+
+	.bg-container {
+		@include flex(flex-start, center, column, $gap:10vh);
+		@include position(0, 0, $position: absolute);
+		pointer-events: none;
+		padding-top: 90px;
+		z-index: -1;
+		overflow: hidden;
+		max-height: 100%;
+	}
+
 </style>
