--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,8 +5,17 @@ import H1 from '../components/H1.astro';
 ---
 
 <Layout title="Preezeo">
-    <Headline />
-    <H1  />
+    <div class="flex flex-col gap-14 justify-start ml-auto mr-auto lg:mr-[15%] w-fit">
+        <Headline />
+        <p class="font-medium tracking-3 text-sm md:max-w-[650px]">
+            <span class="font-semibold text-yellow">PREEZEO</span> intervient dans toute la France métropolitaine afin d’installer vos bornes de recharge pour véhicules électriques. 
+            Nous vous assurons un service de qualité effectué par des électriciens professionnels et agréés IRVE. 
+            <br>
+            <span class="font-semibold text-purple">PREEZEO</span> forme de manière régulière ses techniciens. 
+            Nous favorisons des produits fabriqués en France et nous vous garantissons une pose sous 30 jours.
+        </p>
+    </div>
+    <H1 />
 </Layout>
 
 <style>
