--- a/src/components/Headline.astro
+++ b/src/components/Headline.astro
@@ -1,5 +1,4 @@
-
-<h2 class="font-alien text-2xl text-center">
+<h2 class="w-fit font-alien text-2xl text-center whitespace-nowrap">
     <span class="text-purple">La</span> 
     <span class="text-yellow">Borne</span> 
     qu’il vous faut!
