--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,9 +24,9 @@ const { title } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body class="flex flex-col bg-light font-montserrat text-base">
+	<body class="flex flex-col bg-light font-montserrat text-base leading-[140%]">
 		<Header />	
-		<main class="mt-12 lg:mt-20">
+		<main class="px-5 md:px-20 lg:px-[200px]">
 			<slot />
 		</main>
 		<div class="bg-container">
@@ -49,21 +49,21 @@ const { title } = Astro.props;
 <style lang="scss" is:global>
 	@use '../styles/_variables.scss' as *;
 
-	html {
-		font-size: 60%;
-		@media screen and (min-width: 600px) {
-			font-size: 70%;
-		}
-		@media screen and (min-width: 1024px) {
-			font-size: 80%;
-		}
-		@media screen and (min-width: 1280px) {
-			font-size: 90%;
-		}
-		@media screen and (min-width: 1340px) {
-			font-size: 100%;
-		}
-	}
+	// html {
+	// 	font-size: 60%;
+	// 	@media screen and (min-width: 600px) {
+	// 		font-size: 70%;
+	// 	}
+	// 	@media screen and (min-width: 1024px) {
+	// 		font-size: 80%;
+	// 	}
+	// 	@media screen and (min-width: 1280px) {
+	// 		font-size: 90%;
+	// 	}
+	// 	@media screen and (min-width: 1340px) {
+	// 		font-size: 100%;
+	// 	}
+	// }
 
 	body {
 		min-height: 100vh;
@@ -80,7 +80,7 @@ const { title } = Astro.props;
 	}
 
 	main, footer > *, header {
-		padding: 20px 40px;
+		padding: 35px 40px;
 
 		@media screen and (min-width: 1024px) {
 			padding: 35px 70px;
