Preload fonts and imgs

--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -9,10 +9,10 @@ const linksFirstColumn = [
 ]
 
 const linksSecondColumn = [
-    {name: 'Particulier', link: '#'},
-    {name: 'Infrastructure collective', link: '#'},
-    {name: 'Professionnel', link: '#'},
-    {name: 'Services', link: '#'},
+    {name: 'Particulier', link: '/particuliers'},
+    {name: 'Infrastructure collective', link: '/particuliers'},
+    {name: 'Professionnel', link: '/professionnels'},
+    {name: 'Services', link: '/services'},
 ]
 
 const subLinks = [
