--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -3,11 +3,11 @@ import Button from "../components/Button.astro";
 import Image from "../components/Image.astro";
 
 const links = [
-    {name: 'Particulier', link: '#'},
-    {name: 'Infrastructure collective', link: '#'},
-    {name: 'Professionnel', link: '#'},
-    {name: 'Services', link: '#'},
-    {name: 'En savoir plus', link: '#'},
+    {name: 'Particulier', link: '/particuliers'},
+    {name: 'Infrastructure collective', link: '/infrastructures'},
+    {name: 'Professionnel', link: '/professionnels'},
+    {name: 'Services', link: '/services'},
+    {name: 'En savoir plus', link: '/more'},
 ]
 let toggleMenu = false
 
