--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,13 +15,23 @@ const { title } = Astro.props;
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description">
 		<meta name="viewport" content="width=device-width" />
+		<meta name="description" content="Astro description">
+		<meta name="robots" content="follow"/>
+		<meta name="author" content="Preezeo"/>
+		<meta name="copyright" content="Preezeo"/>
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<!-- <link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-		<meta name="generator" content={Astro.generator} />
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet"> -->
+		<!-- <link rel="preload" as="font" href="/fonts/Montserrat.ttf" type="font/ttf" /> -->
+		<link rel="preload" as="font" href="/fonts/Alien Robot.ttf" type="font/ttf" crossorigin="anonymous"/>
+		<link rel="preload" as="font" href="/fonts/Montserrat.ttf" type="font/ttf" crossorigin="anonymous"/>
+		<link rel="prefetch" as="image" href="/img/backgrounds/bg_shape_top.webp" type="image/webp" crossorigin="anonymous"/>
+		<link rel="prefetch" as="image" href="/img/backgrounds/bg_shape_mid.webp" type="image/webp" crossorigin="anonymous"/>
+		<link rel="prefetch" as="image" href="/img/backgrounds/bg_shape_bot.webp" type="image/webp" crossorigin="anonymous"/>
+		<link rel="preload" as="image" href="/img/logo_burgundy.svg" type="image/svg+xml" />
+		<link rel="preload" as="image" href="/img/logo_purple.svg" type="image/svg+xml" />
 		<title>{title}</title>
 	</head>
 	<body class="flex flex-col bg-light font-montserrat text-base leading-[140%]">
@@ -46,6 +56,7 @@ const { title } = Astro.props;
 		<Footer />
 	</body>
 </html>
+
 <style lang="scss" is:global>
 	@use '../styles/_variables.scss' as *;
 
@@ -65,9 +76,25 @@ const { title } = Astro.props;
 	// 	}
 	// }
 
+
 	body {
 		min-height: 100vh;
 		min-height: 100dvh;
+		&::-webkit-scrollbar {
+			width: .5vw;
+			border-radius: 99px;
+		}
+		&::-webkit-scrollbar-thumb {
+			border: .125vw #EEEFF2 solid;
+			border-radius: 99px;
+			background: #FFB800; 
+		}
+		&::-webkit-scrollbar-thumb:hover {
+			background: #e7a500; 
+		}
+		&::-webkit-scrollbar-track {
+			background: #eeeff200;
+		}
 	}
 
 	main {
@@ -99,6 +126,11 @@ const { title } = Astro.props;
 		z-index: -1;
 		overflow: hidden;
 		max-height: 100%;
+		width: 100%;
+
+		img {
+			width: 100%;
+		}
 	}
 
 </style>
