--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,12 +1,12 @@
 $t: transparent;
-$yellow: '#FFB800';
-$purple: '#515BE0';
-$metal: '#313846';
-$blue: '#E1FFF9';
-$deep-blue: '#171C26';
-$burgundy: '#580925';
-$light: '#EEEFF2';
-$t: 'transparent';
+$yellow: #FFB800;
+$purple: #515BE0;
+$metal: #313846;
+$blue: #E1FFF9;
+$deep-blue: #171C26;
+$burgundy: #580925;
+$light: #EEEFF2;
+$t: transparent;
 $transition: .2s ease-in-out;
 
 //! ///////////
