--- a/src/components/H1.astro
+++ b/src/components/H1.astro
@@ -4,7 +4,7 @@ export interface Props {
 }
 const prop = Astro.props 
 ---
-<h1 class="text-2xl font-bold w-[280px] tracking-3 mt-5 lg:mt-24">
+<h1 class="inline-block text-2xl font-bold w-[280px] tracking-3">
     Ma solution d'installation de 
     <span class="text-yellow">borne de recharche électrique</span> 
     {prop.text?.length > 0 && 
@@ -13,6 +13,7 @@ const prop = Astro.props
 </h1>
 
 
-<style>
+<style lang="scss">
+
 
 </style>
