--- a/src/components/atom/Image.astro
+++ b/src/components/atom/Image.astro
@@ -2,16 +2,17 @@
 export interface Props {
 	src: string;
 	alt: string;
+	display?: 'block' | 'inline';
     cover?: boolean;
     lazyLoading?: boolean;
 	fetchPriority?: boolean;
 }
 
-const { src, alt, cover = false, lazyLoading = true, fetchPriority = false } = Astro.props;
+const { src, alt, display = 'block', cover = false, lazyLoading = true, fetchPriority = false } = Astro.props;
 ---
 
 <img 
-    class={cover ? 'object-cover' : 'object-contain'}
+    class:list={[cover ? 'object-cover' : 'object-contain', display]}
     src={src} 
     alt={alt}
     loading={lazyLoading ? 'lazy' : 'eager'}
