--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 import '../styles/main.scss';
-import Image from '../components/Image.astro';
+import Image from '../components/atom/Image.astro';
 import Header from './Header.astro';
 import Footer from './Footer.astro';
 
@@ -36,7 +36,7 @@ const { title } = Astro.props;
 	</head>
 	<body class="flex flex-col bg-light font-montserrat text-base leading-[140%]">
 		<Header />	
-		<main class="px-5 md:px-20 lg:px-[200px]">
+		<main class="container">
 			<slot />
 		</main>
 		<div class="bg-container">
@@ -80,6 +80,8 @@ const { title } = Astro.props;
 	body {
 		min-height: 100vh;
 		min-height: 100dvh;
+
+
 		&::-webkit-scrollbar {
 			width: .5vw;
 			border-radius: 99px;
@@ -99,6 +101,7 @@ const { title } = Astro.props;
 
 	main {
 		flex: 1;
+		//min-height: 80vh;
 		min-height: 5000px;
 	}
 
@@ -106,16 +109,22 @@ const { title } = Astro.props;
 		position: relative;
 	}
 
-	main, footer > *, header {
-		padding: 35px 40px;
+	footer > *, header {
+		padding: 35px 0;
 
 		@media screen and (min-width: 1024px) {
-			padding: 35px 70px;
+			padding: 35px 0;
 		}
 
 		@media screen and (min-width: 1280px) {
-			padding: 50px 100px;
+			padding: 50px 0;
 		}
+	}
+
+	.container {
+		margin: 0 auto;
+		width: 90vw;
+		max-width: 1400px;
 	}
 
 	.bg-container {
@@ -129,7 +138,15 @@ const { title } = Astro.props;
 		width: 100%;
 
 		img {
-			width: 100%;
+			&:nth-child(1) {
+				width: 80%;
+			}
+			&:nth-child(2) {
+				width: 100%;
+			}
+			&:nth-child(3) {
+				width: 100%;
+			}
 		}
 	}
 
