--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,63 +1,63 @@
 ---
 export interface Props {
-	title: string;
-	body: string;
-	href: string;
+	title?: string;
+	icon?: boolean;
+	number?: number;
+	isSmall?: boolean;
+	stepDisplay?: boolean;
+	color: 'dark' | 'light';
 }
 
-const { href, title, body } = Astro.props;
+const { title, icon, number, color, isSmall, stepDisplay} = Astro.props;
 ---
 
-<li class="link-card">
-	<a href={href}>
-		<h2>
-			{title}
-			<span>&rarr;</span>
-		</h2>
-		<p>
-			{body}
-		</p>
-	</a>
-</li>
-<style>
-	.link-card {
-		list-style: none;
-		display: flex;
-		padding: 0.25rem;
-		background-color: white;
-		background-image: none;
-		background-size: 400%;
-		border-radius: 0.6rem;
-		background-position: 100%;
-		transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-		box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.1);
+<article 
+	class:list={[
+	stepDisplay ? 'card-step' : '', 
+	number && !stepDisplay ? 'mt-10' : '', 
+	isSmall ? 'max-w-[300px]' : '', 
+	color === 'dark' ? 'bg-deep-blue' :'bg-blue', 
+	'flex flex-1 gap-3 items-center relative flex-col rounded-lg px-4 pt-4 pb-8'
+	]}
+>
+	{icon &&
+		<div class="icon">
+			<slot name="icon" />
+		</div>
 	}
 
-	.link-card > a {
-		width: 100%;
-		text-decoration: none;
-		line-height: 1.4;
-		padding: 1rem 1.3rem;
-		border-radius: 0.35rem;
-		color: #111;
-		background-color: white;
-		opacity: 0.8;
+	{number &&
+		<div class="absolute -left-2 -top-2">
+			<p class="text-purple text-[100px] font-montserrat font-medium leading-0">{ number }</p>
+		</div>
 	}
-	h2 {
-		margin: 0;
-		font-size: 1.25rem;
-		transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
+
+	{title?.length && 
+		<h3 class="font-bold text-yellow">{ title }</h3>
 	}
-	p {
-		margin-top: 0.5rem;
-		margin-bottom: 0;
-		color: #444;
+	<div class:list={[color === 'dark' ? 'text-blue' : 'text-deep-blue', 'font-semibold text-sm']}>
+		<slot name="content" />
+	</div>
+</article>
+
+<style lang="scss">
+@use '../styles/_variables.scss' as *;
+
+.icon {
+	@include fixed-size(75px);
+	@include position(0, 35px);
+	translate: -100% 0;
+}
+
+.card-step {
+	padding-top: 0;
+
+	h3 {
+		color: $purple;	
+		font-weight: medium;
+		font-size: 30px;
 	}
-	.link-card:is(:hover, :focus-within) {
-		background-position: 0;
-		background-image: var(--accent-gradient);
-	}
-	.link-card:is(:hover, :focus-within) h2 {
-		color: rgb(var(--accent));
-	}
+
+}
+
 </style>
