--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -28,7 +28,7 @@ const subLinks = [
             <div class="flex flex-col gap-2">
                 <a href="/" class="flex justify-center items-center w-[150px]">
                     <Image 
-                        src="/img/logo_purple.svg" 
+                        src="/img/logo/full_purple.svg" 
                         alt="Logo de Preezeo - la Borne qu’il vous faut!" 
                         fetchPriority={true}
                     />
