--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -76,11 +76,9 @@ const { title } = Astro.props;
 	// 	}
 	// }
 
-
 	body {
 		min-height: 100vh;
 		min-height: 100dvh;
-
 
 		&::-webkit-scrollbar {
 			width: .5vw;
@@ -101,8 +99,8 @@ const { title } = Astro.props;
 
 	main {
 		flex: 1;
-		//min-height: 80vh;
-		min-height: 5000px;
+		min-height: 80vh;
+		//min-height: 5000px;
 	}
 
 	main, footer, header {
