--- a/src/components/atom/Button.astro
+++ b/src/components/atom/Button.astro
@@ -3,14 +3,16 @@ export interface Props {
 	text: string,
 	color?: 'blue' | 'yellow',
     type?: 'button' | 'submit',
+    fullWidth?: boolean,
     outlined?: boolean,
 }
 
-const { text, color = 'blue', outlined = false, type = 'button' } = Astro.props;
+const {fullWidth, text, color = 'blue', outlined = false, type = 'button' } = Astro.props;
 ---
 
 <button 
-    class={`flex items-center justify-center ${color} ${outlined ? 'outlined' : ''}`}
+    class:list={`flex items-center justify-center 
+    ${color} ${outlined ? 'outlined' : ''} ${fullWidth ? 'w-full' : 'w-fit'}`}
     type={type}
 >
 {text}
