--- a/src/components/atom/Image.astro
+++ b/src/components/atom/Image.astro
@@ -3,16 +3,17 @@ export interface Props {
 	src: string;
 	alt: string;
 	display?: 'block' | 'inline';
+    contentVisibility?: boolean;
     cover?: boolean;
     lazyLoading?: boolean;
 	fetchPriority?: boolean;
 }
 
-const { src, alt, display = 'block', cover = false, lazyLoading = true, fetchPriority = false } = Astro.props;
+const { contentVisibility, src, alt, display = 'block', cover = false, lazyLoading = true, fetchPriority = false } = Astro.props;
 ---
 
 <img 
-    class:list={[cover ? 'object-cover' : 'object-contain', display]}
+    class:list={[cover ? 'object-cover' : 'object-contain', display, contentVisibility ? 'visibility' :  '']}
     src={src} 
     alt={alt}
     loading={lazyLoading ? 'lazy' : 'eager'}
@@ -21,10 +22,13 @@ const { src, alt, display = 'block', cover = false, lazyLoading = true, fetchPri
     decoding="async"
 >
 
-<style>
+<style lang="scss">
 img {
     display: block;
-    content-visibility: auto;
-    contain-intrinsic-size: auto 800px;
+
+    &.visibility {
+        content-visibility: auto;
+        contain-intrinsic-size: auto 800px;
+    }
 }
 </style>
