--- a/src/components/H1.astro
+++ b/src/components/H1.astro
@@ -6,7 +6,7 @@ const prop = Astro.props
 ---
 <h1 class="inline-block text-2xl font-bold w-[280px] tracking-3">
     Ma solution d'installation de 
-    <span class="text-yellow">borne de recharche</span> 
+    <span class="text-yellow">borne de recharge</span> 
     {prop.text?.length > 0 && 
         <br> <span class="text-purple">{prop.text}</span>
     }
