--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -50,7 +50,7 @@ const subLinks = [
             </nav>
         </div>
     </div>
-    <div class="bg-deep-blue">
+    <div class="bg-deep-blue py-5">
         <div class="container flex justify-between items-center">
             <div class="container flex items-center gap-3">
                 <svg width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
