--- a/src/components/ProjectStripe.astro
+++ b/src/components/ProjectStripe.astro
@@ -12,7 +12,7 @@ import Button from './atom/Button.astro';
     </div>
     <div class="flex flex-col gap-3">
         <p class="inline">
-            <span class="leading-1">
+            <span class="font-montserrat font-medium text-sm leading-1">
                 Chaque projet est différent ! <br>
                 Le bureau d’étude 
             </span>
@@ -25,7 +25,7 @@ import Button from './atom/Button.astro';
                     fetchPriority={true}
                 />
             </span>
-            <span class="leading-1">étudie chaque configuration.</span>
+            <span class="font-montserrat font-medium text-sm leading-1">étudie chaque configuration.</span>
         </p>
         <div class="w-1/2">
             <Button 
