--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Button from '../components/atom/Button.astro';
 import Image from '../components/atom/Image.astro';
 import H1 from '../components/H1.astro';
 import Tips from '../components/Tips.astro';
+import Section from '../components/Section.astro';
 import Card from '../components/Card.astro';
 import ProjectStripe from '../components/ProjectStripe.astro';
 
@@ -30,21 +31,26 @@ const defaultCards = [
             Nous favorisons des produits fabriqués en France et nous vous garantissons une pose sous 30 jours.
         </p>
     </section>
-    <section class="heading-container mb-10 md:mb-[250px]">
-        <div class="top">
+
+    <Section c="relative mt-15">
+        <div class="link-svg top">
             <svg width="68" height="114" viewBox="0 0 68 114" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M33.9753 113.5V2.25439M0 2.25439H67.9507" stroke="#FFB800" stroke-width="4.50693"/>
             </svg> 
         </div>
         <H1 />
-        <div class="bottom">
+        <div class="link-svg bottom">
             <svg width="988" height="343" viewBox="0 0 988 343" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M985.747 342.597V310.5M985.747 310.5V279.5M985.747 310.5L5.81867 309.214L5.39599 156.444L30.0683 79.4992M41.7098 94.0542L3 94.0546V0" stroke="#FFB800" stroke-width="4.50693"/>
             </svg>
             <div class="flex gap-20 text-center items-end justify-end absolute bottom-[32px] right-8">
-                <div class="flex flex-col gap-2 items-center justify-center">
-                    
-                    <h3 class="font-semibold tracking-3 text-sm font-montserrat"><a href="/particuliers">Particulier</a></h3>
+                <a href="/particuliers" class="flex flex-col gap-2 items-center justify-center">
+                    <Image 
+                        src="/img/icons/house.svg" 
+                        alt="House icon"
+                        fetchPriority={true}
+                    />
+                    <h3 class="font-semibold tracking-3 text-sm font-montserrat">Particulier</h3>
                     <svg width="54" height="102" viewBox="0 0 54 102" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <line x1="26.8618" y1="101.083" x2="26.8618" y2="46.9998" stroke="#FFB800" stroke-width="4.50693"/>
                         <g filter="url(#filter0_i_1738_3632)">
@@ -64,22 +70,39 @@ const defaultCards = [
                         </filter>
                         </defs>
                     </svg>
-                </div>
+                </a>
 
-                <svg width="54" height="195" viewBox="0 0 54 195" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <line y1="-2.25347" x2="146.942" y2="-2.25347" transform="matrix(-6.61363e-05 -1 1 -5.70256e-05 29.1797 194.942)" stroke="#FFB800" stroke-width="4.50693"/>
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M34.9836 18.8545C36.6393 20.5967 37.6444 22.8845 37.6444 25.3884C37.6444 30.8434 32.8749 35.2721 27.0003 35.2721C21.1258 35.2721 16.3563 30.8434 16.3563 25.3884C16.3563 22.8583 17.3825 20.5489 19.0691 18.8C19.7607 18.0828 19.6952 16.9793 18.9228 16.3371C18.1506 15.6949 16.9621 15.7558 16.2705 16.4729C13.9882 18.8396 12.5996 21.9646 12.5996 25.3884C12.5996 32.7687 19.0524 38.7605 27.0003 38.7605C34.9483 38.7605 41.4011 32.7687 41.4011 25.3884C41.4011 22 40.041 18.9041 37.8006 16.5464C37.1146 15.8246 35.9267 15.7557 35.1493 16.3926C34.372 17.0295 34.2978 18.1326 34.9836 18.8545Z" fill="#515BE0"/>
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M27.0012 0C12.142 0 0.078125 11.2021 0.078125 25C0.078125 38.7979 12.142 50 27.0012 50C41.8604 50 53.9243 38.7979 53.9243 25C53.9243 11.2021 41.8604 0 27.0012 0ZM27.0012 3.48837C39.7871 3.48837 50.1676 13.1274 50.1676 25C50.1676 36.8726 39.7871 46.5116 27.0012 46.5116C14.2153 46.5116 3.83483 36.8726 3.83483 25C3.83483 13.1274 14.2153 3.48837 27.0012 3.48837ZM28.8795 27.3256V13.3721C28.8795 12.4095 28.0379 11.6279 27.0012 11.6279C25.9645 11.6279 25.1228 12.4095 25.1228 13.3721V27.3256C25.1228 28.2883 25.9645 29.0698 27.0012 29.0698C28.0379 29.0698 28.8795 28.2883 28.8795 27.3256Z" fill="#FFB800"/>
-                </svg>
-                <svg width="55" height="258" viewBox="0 0 55 258" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <line x1="28.2758" y1="257.352" x2="28.2758" y2="49.1312" stroke="#FFB800" stroke-width="4.50693"/>
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M35.4817 18.8535C37.1374 20.5958 38.1424 22.8835 38.1424 25.3874C38.1424 30.8424 33.3729 35.2711 27.4984 35.2711C21.6238 35.2711 16.8544 30.8424 16.8544 25.3874C16.8544 22.8573 17.8806 20.5479 19.5672 18.799C20.2588 18.0819 20.1932 16.9783 19.4209 16.3361C18.6486 15.6939 17.4601 15.7548 16.7685 16.4719C14.4862 18.8386 13.0977 21.9636 13.0977 25.3874C13.0977 32.7677 19.5504 38.7595 27.4984 38.7595C35.4464 38.7595 41.8991 32.7677 41.8991 25.3874C41.8991 21.999 40.5391 18.9032 38.2986 16.5455C37.6127 15.8236 36.4247 15.7547 35.6473 16.3916C34.87 17.0285 34.7958 18.1316 35.4817 18.8535Z" fill="#515BE0"/>
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M27.4992 0.000976562C12.64 0.000976562 0.576172 11.2031 0.576172 25.001C0.576172 38.7989 12.64 50.001 27.4992 50.001C42.3585 50.001 54.4223 38.7989 54.4223 25.001C54.4223 11.2031 42.3585 0.000976562 27.4992 0.000976562ZM27.4992 3.48935C40.2851 3.48935 50.6656 13.1284 50.6656 25.001C50.6656 36.8736 40.2851 46.5126 27.4992 46.5126C14.7134 46.5126 4.33288 36.8736 4.33288 25.001C4.33288 13.1284 14.7134 3.48935 27.4992 3.48935ZM29.3776 27.3266V13.3731C29.3776 12.4104 28.5359 11.6289 27.4992 11.6289C26.4625 11.6289 25.6209 12.4104 25.6209 13.3731V27.3266C25.6209 28.2892 26.4625 29.0707 27.4992 29.0707C28.5359 29.0707 29.3776 28.2892 29.3776 27.3266Z" fill="#FFB800"/>
-                </svg>
+                <a href="/infrastructures" class="flex flex-col gap-2 items-center justify-center">
+                    <Image 
+                        src="/img/icons/apartement.svg" 
+                        alt="Apartements icon"
+                        fetchPriority={true}
+                    />
+                    <h3 class="font-semibold tracking-3 text-sm font-montserrat">Infrastructure collective</h3>
+                    <svg width="54" height="195" viewBox="0 0 54 195" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <line y1="-2.25347" x2="146.942" y2="-2.25347" transform="matrix(-6.61363e-05 -1 1 -5.70256e-05 29.1797 194.942)" stroke="#FFB800" stroke-width="4.50693"/>
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M34.9836 18.8545C36.6393 20.5967 37.6444 22.8845 37.6444 25.3884C37.6444 30.8434 32.8749 35.2721 27.0003 35.2721C21.1258 35.2721 16.3563 30.8434 16.3563 25.3884C16.3563 22.8583 17.3825 20.5489 19.0691 18.8C19.7607 18.0828 19.6952 16.9793 18.9228 16.3371C18.1506 15.6949 16.9621 15.7558 16.2705 16.4729C13.9882 18.8396 12.5996 21.9646 12.5996 25.3884C12.5996 32.7687 19.0524 38.7605 27.0003 38.7605C34.9483 38.7605 41.4011 32.7687 41.4011 25.3884C41.4011 22 40.041 18.9041 37.8006 16.5464C37.1146 15.8246 35.9267 15.7557 35.1493 16.3926C34.372 17.0295 34.2978 18.1326 34.9836 18.8545Z" fill="#515BE0"/>
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M27.0012 0C12.142 0 0.078125 11.2021 0.078125 25C0.078125 38.7979 12.142 50 27.0012 50C41.8604 50 53.9243 38.7979 53.9243 25C53.9243 11.2021 41.8604 0 27.0012 0ZM27.0012 3.48837C39.7871 3.48837 50.1676 13.1274 50.1676 25C50.1676 36.8726 39.7871 46.5116 27.0012 46.5116C14.2153 46.5116 3.83483 36.8726 3.83483 25C3.83483 13.1274 14.2153 3.48837 27.0012 3.48837ZM28.8795 27.3256V13.3721C28.8795 12.4095 28.0379 11.6279 27.0012 11.6279C25.9645 11.6279 25.1228 12.4095 25.1228 13.3721V27.3256C25.1228 28.2883 25.9645 29.0698 27.0012 29.0698C28.0379 29.0698 28.8795 28.2883 28.8795 27.3256Z" fill="#FFB800"/>
+                    </svg>
+                </a>
+                <a href="/professionnels" class="flex flex-col gap-2 items-center justify-center">
+                    <Image 
+                        src="/img/icons/building.svg" 
+                        alt="Building icon"
+                        fetchPriority={true}
+                    />
+                    <h3 class="font-semibold tracking-3 text-sm font-montserrat">Professionnel</h3>
+                    <svg width="55" height="258" viewBox="0 0 55 258" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <line x1="28.2758" y1="257.352" x2="28.2758" y2="49.1312" stroke="#FFB800" stroke-width="4.50693"/>
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M35.4817 18.8535C37.1374 20.5958 38.1424 22.8835 38.1424 25.3874C38.1424 30.8424 33.3729 35.2711 27.4984 35.2711C21.6238 35.2711 16.8544 30.8424 16.8544 25.3874C16.8544 22.8573 17.8806 20.5479 19.5672 18.799C20.2588 18.0819 20.1932 16.9783 19.4209 16.3361C18.6486 15.6939 17.4601 15.7548 16.7685 16.4719C14.4862 18.8386 13.0977 21.9636 13.0977 25.3874C13.0977 32.7677 19.5504 38.7595 27.4984 38.7595C35.4464 38.7595 41.8991 32.7677 41.8991 25.3874C41.8991 21.999 40.5391 18.9032 38.2986 16.5455C37.6127 15.8236 36.4247 15.7547 35.6473 16.3916C34.87 17.0285 34.7958 18.1316 35.4817 18.8535Z" fill="#515BE0"/>
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M27.4992 0.000976562C12.64 0.000976562 0.576172 11.2031 0.576172 25.001C0.576172 38.7989 12.64 50.001 27.4992 50.001C42.3585 50.001 54.4223 38.7989 54.4223 25.001C54.4223 11.2031 42.3585 0.000976562 27.4992 0.000976562ZM27.4992 3.48935C40.2851 3.48935 50.6656 13.1284 50.6656 25.001C50.6656 36.8736 40.2851 46.5126 27.4992 46.5126C14.7134 46.5126 4.33288 36.8736 4.33288 25.001C4.33288 13.1284 14.7134 3.48935 27.4992 3.48935ZM29.3776 27.3266V13.3731C29.3776 12.4104 28.5359 11.6289 27.4992 11.6289C26.4625 11.6289 25.6209 12.4104 25.6209 13.3731V27.3266C25.6209 28.2892 26.4625 29.0707 27.4992 29.0707C28.5359 29.0707 29.3776 28.2892 29.3776 27.3266Z" fill="#FFB800"/>
+                    </svg>
+                </a>
             </div>
         </div>
-    </section>
-    <section class="flex align-center justify-center mb-10 md:mb-[250px]">
+    </Section>
+
+    <Section flex={true}>
         <Tips>
             <p 
                 slot="text"
@@ -103,9 +126,9 @@ const defaultCards = [
                 color="yellow"
             />
         </Tips>
-    </section>
+    </Section>
 
-    <section class="flex justify-center items-stretch gap-10 mb-10 md:mb-[250px]">
+    <Section flex={true} c="gap-10">
         <Card 
             color="dark"
             title="Votre Besoin"
@@ -140,11 +163,12 @@ const defaultCards = [
                 Bienvenue chez 
             </p>
         </Card>
-    </section>
-
-    <section class="flex justify-center items-stretch mb-10 md:mb-[250px]">
+    </Section>
+    
+    <Section flex={true}>
         <ProjectStripe />
-    </section>
+    </Section>
+
     <section class="flex justify-center items-stretch flex-wrap gap-10 max-w-[1000px] mx-auto mb-10 md:mb-[250px]">
         {defaultCards.map((item) => (
             <Card 
@@ -199,17 +223,14 @@ const defaultCards = [
 <style lang="scss">
 @use '../styles/_variables.scss' as *;
 
-.heading-container {
-    position: relative;
-    margin-top: 75px;
-
-    .top {
+.link-svg {
+    &.top {
         @include flex(center,flex-start);
         @include position(-20px, 90px);
         translate: -40px -100%;
     }
 
-    .bottom {
+    &.bottom {
         @include flex(center,flex-start);
         // @include position(calc(20px + 100%), $left:50%);
         // position: absolute;
